# src/src/controllers/task.controller.ts
@@ -1,12 +1,13 @@
 import { injectable, inject } from 'inversify';
 import { Request as ExpressRequest, Response as ExpressResponse } from 'express';
 import { MissingFieldError } from '../errors/app.errors';
-import { TaskGetDTO as TaskGetDto, TaskCreateDTO } from '../dto/task.dto';
+import {MongoQuerySpec} from '../repositories/repository'
 import { ITaskService } from '../services/task.service';
-import { getValidObjectId } from '../utils/utils';
-import { ITaskRepository, TaskDocument } from '../repositories/task.repository';
+import { getValidObjectId, response } from '../utils/utils';
+import { ITaskRepository} from '../repositories/task.repository';
 import { TYPES } from '../types';
-import { FilterQuery } from 'mongodb';
+import { validatePayload } from '../utils/validators';
+import { TaskCreateSchema, TaskUpdateSchema } from '../dto/model/task.model';
 
 @injectable()
 export default class TaskController {
@@ -21,18 +22,22 @@ export default class TaskController {
   }
 
   public async find(req: ExpressRequest, res: ExpressResponse): Promise<void> {
-    const limit = req.query.limit ? parseInt(req.query.limit as string) : this.limit;
-    const pageNumber = req.query.page ? parseInt(req.query.page as string) : 1;
 
-    const getTaskDto: TaskGetDto = {
-      pageNumber,
-      limit,
-      filter: req.query.filter as FilterQuery<Partial<TaskDocument>>,
-      path: req.path,
-    };
+    const {limit , pageNumber} = req.body
+    // const limit = req.query.limit ? parseInt(req.query.limit as string) : this.limit;
+    // const pageNumber = req.query.page ? parseInt(req.query.page as string) : 1;
 
-    const response = await this.taskService.getAllTasks(getTaskDto);
-    res.send(response);
+    const query: MongoQuerySpec = {
+      query: {isActive:true},
+      options:{
+        limit: limit || this.limit,
+        //sort: {DocumentCreatedOn: -1},
+        fields: {title:1,description:1,status:1},
+        skip: pageNumber || 1
+      }
+    }   
+    const result = await this.taskService.getAllTasks(query);
+    res.status(200).send(response(null,result.data,'data fetch successfully'));
   }
 
   public async get(req: ExpressRequest, res: ExpressResponse): Promise<void> {
@@ -51,36 +56,25 @@ export default class TaskController {
    * @requires description A valid description
    **/
   public async create(req: ExpressRequest, res: ExpressResponse) {
-
-    if (!req.body.title) {
-      throw new MissingFieldError('title');
+    const validate:any = await validatePayload(TaskCreateSchema, req.body);
+    if (validate && validate.isValid && validate.statusCode == 200) {
+       const result = await this.taskService.createTask(req.body);
+       res.status(201).send(response(null,result,'task created'));
     }
-
-    if (!req.body.description) {
-      throw new MissingFieldError('description');
-    }
-
-    const createTaskDto: TaskCreateDTO = {
-      title: req.body.title,
-      description: req.body.description
-    };
-
-    await this.taskService.createTask(createTaskDto);
-
-    res.sendStatus(201);
-  }
+    else res.status(validate.statusCode).send(response(validate.error,null,null));
+   }
 
   public async update(req: ExpressRequest, res: ExpressResponse): Promise<void> {
-    if (!req.params.id) {
-      throw new MissingFieldError('id');
-    }
-
-    const updateTaskDto: TaskCreateDTO = {
-        title: req.body.title,
-        description: req.body.description
-      };
-
-    res.send(await this.taskService.updateTask(getValidObjectId(req.params.id), updateTaskDto));
+    
+    const validate:any = await validatePayload(TaskUpdateSchema, req.body);
+    if (validate && validate.isValid && validate.statusCode == 200) {
+      req.body.taskid = getValidObjectId(req.body.taskid)
+      const result = await this.taskService.updateTask(req.body)
+      console.log("resultt",result)
+      res.status(204).send(response(null,null,'task created'))
+    }else res.status(validate.statusCode).send(response(validate.error,null,null));
+    
+   // res.send(await this.taskService.updateTask(getValidObjectId(req.params.id), updateTaskDto));
 
 
   }
